--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "cucumber-js"
+        "test": "cucumber-js -p default"
     },
     "repository": {
         "type": "git",
@@ -19,11 +19,13 @@
     "homepage": "https://github.com/OhadR/hellocucumber#readme",
     "devDependencies": {
         "@cucumber/cucumber": "7.3.2",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.5.5"
+        "@types/node": "^17.0.8"
     },
     "dependencies": {
+        "cucumber-tsflow": "^4.0.0-preview.7",
         "debug": "^4.3.3",
-        "express": "^4.17.2"
+        "express": "^4.17.2",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.5"
     }
 }
